force-app/main/default/objects/Signature__c/Signature__c.object-meta.xml
<CustomObject>
    <description>Demo/dummy child of Form__c. The actual signature image is uploaded as a Salesforce File (ContentDocumentLink) attached to the Signature__c record.</description>
    <label>Signature</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>Signature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>