force-app/main/default/objects/Signature__c/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <description>Distinguishes which slot in a multi-signature template a given signature feeds (e.g., the "physician" image goes into the doctor row, the "patient" image into the patient row).</description>
    <label>Signature Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
                <default>true</default>
                <label>Patient</label>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>