force-app/main/default/objects/Signature__c/fields/Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Signed_At__c</fullName>
    <label>Signed At</label>
    <type>DateTime</type>
</CustomField>