force-app/main/default/objects/Signature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Signature_Type__c</columns>
    <columns>Signed_By__c</columns>
    <columns>Signed_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>